--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,205 +1,126 @@
-.nav-header {
-  height: 64px;
-  width: 100%;
-  background: #f8fafc;
-  padding-top: 5px;
-  margin-top: 10px;
-  box-shadow: 2px 2px 10px 2px #efefef;
-}
-@media screen and (min-width: 768px) {
-  .nav-header {
-    height: 80px;
-    width: 100%;
-    padding: 0;
-  }
-}
-.nav-content-small {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-@media screen and (min-width: 768px) {
-  .nav-content-small {
-    display: none;
-  }
-}
-.nav-content-large {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-@media screen and (max-width: 767px) {
-  .nav-content-large {
-    display: none;
-  }
-}
-.logo-large {
-  display: flex;
-  align-items: center;
-}
-.logo-name {
-  display: flex;
-  align-items: center;
-}
-.header-logo {
-  height: 32px;
-  width: 39px;
-  left: 24px;
-  top: 16px;
-}
-.header-logo-large {
-  height: 32px;
-  width: 39px;
-  left: 24px;
-  top: 16px;
+.navbar {
+  padding: 8px 24px;
+  background-color: #f8fafc;
 }
 
-@media screen and (min-width: 768px) {
-  .header-logo {
-    height: 39px;
-    width: 49px;
-  }
+.logo-hamburger-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.header-heading {
-  font-family: DM Sans;
-  font-size: 16px;
+
+.website-logo-container {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+}
+
+.website-logo {
+  height: 36px;
+}
+
+.website-title {
+  color: #f7931e;
+  margin-left: 8px;
+  font-size: 20px;
+  font-weight: 700;
   font-style: italic;
-  font-weight: 700;
-  line-height: 24px;
-  margin-left: 15px;
-  color: #f7931e;
-}
-@media screen and (min-width: 768px) {
-  .header-heading {
-    font-size: 24px;
-    line-height: 32px;
-  }
+  font-family: 'DM Sans';
 }
 
-.mobile-logout {
-  padding: 8px 16px;
-  background-color: #f7931e;
-  border-radius: 8px;
-  margin: 0px 0px;
-  height: 32px;
-  width: 73px;
-  color: #ffffff;
-  font-family: DM Sans;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-  outline: none;
+.nav-button {
+  padding: 0;
   border: none;
-  cursor: pointer;
-}
-.desktop-logout {
-  font-size: 16px;
-  font-family: DM Sans;
-  height: 32px;
-  width: 73px;
-  color: #ffffff;
-  left: 0px;
-  top: 0px;
-  border-radius: 8px;
-  padding: 8px, 16px, 8px, 16px;
-  background-color: #f7931e;
   outline: none;
-  border: none;
-  cursor: pointer;
+  margin-left: auto;
+  background-color: transparent;
 }
 
-.mobile-popup {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-@media screen and (min-width: 768px) {
-  .mobile-popup {
-    display: none;
-  }
+.hamburger-icon {
+  color: #183b56;
+  font-size: 20px;
 }
 
-.popup-content {
-  top: 60px;
-  left: -12px;
-  background-color: #ffffff;
-  width: 100vw;
-  height: 100vh;
-  flex-direction: column;
+.nav-items-container {
+  display: none;
+}
+
+.nav-items-container-mobile-view {
   display: flex;
   align-items: center;
-  margin-top: 30px;
-}
-@media screen and (min-width: 768px) {
-  .popup-content {
-    display: none;
-  }
-}
-
-.mobile-links {
   padding-left: 0;
-  display: flex;
-  align-items: center;
-}
-.mbl-item {
-  list-style: none;
-  margin: 10px;
-}
-.popup-close {
-  padding: 0;
-  outline: none;
-  margin: 0;
-  height: 24px;
-  width: 24px;
-  border: none;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: transparent;
-}
-.nav-link {
-  text-decoration: none;
-}
-.links-large {
-  display: flex;
-  align-items: center;
-}
-.nav-ul {
   list-style-type: none;
-  display: flex;
-  align-items: center;
 }
 
-.link-item {
-  font-family: DM Sans;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 26px;
-  color: #334155;
-  text-decoration: none;
-  margin-right: 15px;
+.nav-item {
+  margin: 0 10px;
 }
-.active-link {
+
+.nav-item-link,
+.nav-item-active-link {
+  font-size: 16px;
+  color: #334155;
+  font-weight: 500;
+  text-decoration: none;
+}
+
+.nav-item-active-link {
   color: #f7931e;
 }
-.link-mobile {
-  font-family: DM Sans;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 26px;
-  color: #334155;
-  text-decoration: none;
-  margin-right: 15px;
-}
-.active-mobile {
-  color: #f7931e;
-}
-.ham-button {
-  padding: 0;
-  outline: none;
-  margin: 0;
-  height: 24px;
-  width: 24px;
+
+.logout-button {
   border: none;
-  background-color: transparent;
+  outline: none;
+  color: #ffffff;
+  padding: 6px 16px;
+  border-radius: 6px;
+  font-weight: 500;
+  background-color: #f7931e;
+}
+
+.logout-button:hover {
+  background-color: #ffaa4a;
+}
+
+.close-icon {
+  color: #334155;
+  font-size: 18px;
+}
+
+@media screen and (min-width: 768px) {
+  .navbar {
+    padding: 8px 48px;
+    display: flex;
+    align-items: center;
+  }
+
+  .nav-button {
+    display: none;
+  }
+
+  .nav-items-container-mobile-view {
+    display: none;
+  }
+
+  .nav-items-container {
+    display: flex;
+    padding-left: 0;
+    margin-left: auto;
+    align-items: center;
+    list-style-type: none;
+  }
+
+  .nav-item-active-link {
+    font-size: 18px;
+  }
+
+  .logout-button {
+    font-size: 15px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .navbar {
+    padding: 8px 100px;
+  }
 }
